# tutoring-outcomes-runtime

./: CHANGELOG.md  README.md  justfile
.github/workflows/: ci.yml
data-demo/: submission_format.csv  test_features.csv
data-demo/test_transcripts/: txqplmn.csv  vbcgmrs.csv  wdhnpkq.csv  xrkbswt.csv  ynfjpvq.csv
examples/minimal/: main.py
examples/minimal/src/: model.py
examples/template/: main.py
runtime/: Dockerfile  entrypoint.sh  pyproject.toml
runtime/tests/: test_packages.py
